fix: some ajusts