@@ -1,10 +1,10 @@
 package com.xpto.financemanager.services;
 
-import com.xpto.financemanager.entities.AccountEntity;
-import com.xpto.financemanager.entities.AddressEntity;
-import com.xpto.financemanager.entities.CustomerEntity;
-import com.xpto.financemanager.entities.TransactionEntity;
-import com.xpto.financemanager.enums.ETransactionType;
+import com.xpto.financemanager.entities.Account;
+import com.xpto.financemanager.entities.Address;
+import com.xpto.financemanager.entities.Customer;
+import com.xpto.financemanager.entities.Transaction;
+import com.xpto.financemanager.enums.TransactionType;
 import com.xpto.financemanager.exceptions.NotFoundException;
 import com.xpto.financemanager.repositories.*;
 import org.springframework.stereotype.Service;
@@ -14,6 +14,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CustomerReportPerPeriodService {
@@ -39,31 +40,31 @@ public class CustomerReportPerPeriodService {
     }
 
     public void generateCustomerReportPerPeriod(Long customerId, LocalDate initialDate, LocalDate finalDate) {
-        var customer = this.customerRepository.findById(customerId)
+        Customer customer = this.customerRepository.findById(customerId)
                 .orElseThrow(() -> new NotFoundException("Cliente não encontrado"));
 
-        List<AccountEntity> accounts = this.accountRepository.findByCustomerId(customerId);
+        List<Account> accounts = this.accountRepository.findByCustomerId(customerId);
 
         List<Long> accountIds = accounts
                 .stream()
-                .map(AccountEntity::getId)
-                .toList();
+                .map(Account::getId)
+                .collect(Collectors.toList());
 
         LocalDateTime start = initialDate.atTime(0, 0, 0);
         LocalDateTime end = finalDate.atTime(23, 59, 59);
 
-        List<TransactionEntity> transactions = this.transactionRepository
+        List<Transaction> transactions = this.transactionRepository
                 .findByAccountIdInAndTransactionDateBetween(accountIds, start, end);
 
         int creditsTransactionsQuantity = (int) transactions.stream()
-                .filter(t -> t.getTransactionType() == ETransactionType.CREDIT)
+                .filter(t -> t.getTransactionType() == TransactionType.CREDIT)
                 .count();
 
         int debitsTransactionsQuantity = (int) transactions.stream()
-                .filter(t -> t.getTransactionType() == ETransactionType.DEBIT)
+                .filter(t -> t.getTransactionType() == TransactionType.DEBIT)
                 .count();
 
-        BigDecimal actualValue = accounts.stream().map(AccountEntity::getBalance)
+        BigDecimal actualValue = accounts.stream().map(Account::getBalance)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         String customerName = customer.getName();
@@ -73,7 +74,7 @@ public class CustomerReportPerPeriodService {
 
         String period = initialDate.format(formatter) + " a " + finalDate.format(formatter);
 
-        AddressEntity addr = this.addressRepository.findByCustomerId(customerId)
+        Address addr = this.addressRepository.findByCustomerId(customerId)
                 .orElseThrow(() -> new NotFoundException("Endereço não encontrado"));
 
         String address = addr != null
@@ -101,7 +102,7 @@ public class CustomerReportPerPeriodService {
     private BigDecimal calculateCustomerValuePerPeriod(
             Long customerId, LocalDate initialDate, LocalDate finalDate
     ) {
-        CustomerEntity customer = this.customerRepository.findById(customerId)
+        Customer customer = this.customerRepository.findById(customerId)
                 .orElseThrow(() -> new NotFoundException("Cliente não encontrado."));
 
         return this.reportRepository.calculateCustomerValuePerPeriod(customerId,initialDate, finalDate);
